configure: check if #pragma GCC diagnostic works in functions
Check whether the compiler supports #pragma GCC diagnostic within a function
body.  This will be used more extensively later, for local identifier poisoning
in user C code.
Along with another forthcoming change set, this will enable support for early
versions of GCC 4.

Thanks to Bruno Haible for making me aware of the issue.

* configure: New test. (ac_cv_have_pragma_gcc_diagnostic_in_functions): New
shell variable.
(JITTER_HAVE_PRAGMA_GCC_DIAGNOSTIC_IN_FUNCTIONS): New CPP feature macro.

* jitter/jitter-config.h.in (JITTER_HAVE_PRAGMA_GCC_DIAGNOSTIC_IN_FUNCTIONS):
New CPP feature macro.

--- a/configure.ac
+++ b/configure.ac
@@ -870,6 +870,23 @@ if test "x$ac_cv_have_gnu_c_asm_goto" = "xyes"; then
             [Define if the compiler supports GNU C's asm goto .])
 fi
 
+# Check whether #pragma GCC diagnostic is usable inside functions.
+AC_CACHE_CHECK([for @%:@pragma GCC diagnostic insude functions],
+  [ac_cv_have_pragma_gcc_diagnostic_in_functions],
+  [AC_COMPILE_IFELSE(
+     [AC_LANG_PROGRAM(
+        [],
+        [[# pragma GCC diagnostic push
+# pragma GCC diagnostic pop
+        ]])],
+     [ac_cv_have_pragma_gcc_diagnostic_in_functions=yes],
+     [ac_cv_have_pragma_gcc_diagnostic_in_functions=no])])
+if test "x$ac_cv_have_pragma_gcc_diagnostic_in_functions" = "xyes"; then
+  AC_DEFINE([JITTER_HAVE_PRAGMA_GCC_DIAGNOSTIC_IN_FUNCTIONS], [1],
+            [Define if the compiler supports #pragma GCC diagnostic inside
+             functions.])
+fi
+
 
 # Check for GCC attributes.
 ################################################################
